--- a/.github/workflows/branch-csr-example-validations.yaml
+++ b/.github/workflows/branch-csr-example-validations.yaml
@@ -21,7 +21,7 @@ jobs:
      - uses: actions/checkout@v4
      - uses: actions/setup-node@v4
        with:
-         node-version: 20
+         node-version: 23
 
      - name: Cache dependencies
        id: cache-dependencies
@@ -35,8 +35,7 @@ jobs:
        run: npm ci
 
      - name: Check dependency vulnerabilities
-       run: |-
-         npm audit --omit=dev
+       run: npm audit --omit=dev
 
   validate:
     runs-on: ubuntu-latest
@@ -47,7 +46,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -74,7 +73,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -101,7 +100,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
