--- a/.github/workflows/branch-validations.yaml
+++ b/.github/workflows/branch-validations.yaml
@@ -18,7 +18,7 @@ jobs:
      - uses: actions/checkout@v4
      - uses: actions/setup-node@v4
        with:
-         node-version: 20
+         node-version: 23
 
      - name: Cache dependencies
        id: cache-dependencies
@@ -32,8 +32,7 @@ jobs:
        run: npm ci
 
      - name: Check dependency vulnerabilities
-       run: |-
-         npm audit --omit=dev
+       run: npm audit --omit=dev
 
   validate:
     runs-on: ubuntu-latest
@@ -41,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -65,7 +64,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -89,7 +88,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
