--- a/.github/workflows/publish-pr-preview.yaml
+++ b/.github/workflows/publish-pr-preview.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -24,22 +24,19 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: |-
-          npm ci
-          rm -rf ~/.npmrc
+        run: npm ci
 
       - name: Build package
         run: npm run build
 
       - name: Prepare release
         run: |-
-          cp package.json LICENSE README.md build/
+          cp LICENSE README.md build/
           cd build
           find . -type f -path '*/*\.js.map' -exec sed -i -e "s~../src~src~" {} +
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
           sed -i -e "s~\./build~.~" package.json
           sed -i -e "s~./src~.~" package.json
-          cp -r ../src src
 
       - name: Publish preview
         run: |-
