--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@croct/plug": "^0.20.0",
-    "@croct/sdk": "^0.19.0"
+    "@croct/plug": "https://pkg.pr.new/@croct/plug@358",
+    "@croct/sdk": "https://pkg.pr.new/@croct/sdk@485"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
